--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,3 +176,12 @@ services:
       KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+
+  rabbitmq: # login guest:guest
+    image: rabbitmq:management-alpine
+    hostname: "rabbitmq"
+    labels:
+     name: "rabbitmq"
+    container_name: "rabbitmq"    
+    ports:
+     - 15672:15672
