--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,3 +176,23 @@ services:
       KAFKA_REST_BOOTSTRAP_SERVERS: 'broker:29092'
       KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+
+  postgres:
+    image: postgres
+    hostname: postgres-cap
+    container_name: postgres-cap
+    ports:
+        - "5432:5432"
+    restart: always
+    environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: Demo.01
+        POSTGRES_DB: postgres
+ 
+  adminer:
+    image: adminer:latest
+    restart: always
+    ports:
+      - 8484:8080
+    environment:
+      DMINER_DESIGN: galkaev
